# tibco-ems-operator

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  cert.crt  private.key
.github/: dependabot.yml
.github/workflows/: build.yml  codecov.yml  docker.yml  main.yml  pr.yml
crds/: topic.yaml
deploy/: custom-metrics.yaml  operator.yaml  service-account.yaml  tibco-ems-operator-secret.yaml
deploy/crds/: bridge.yaml  queue.yaml  topic.yaml
examples/: bridge-sample1.yaml  queue-sample1.yaml  queue-sample2.yaml  scale-on-pending-messages.yaml  scaled-deployment.yaml  server-secret.yaml  tibco-ems-operator-secret.yaml  topic-sample1.yaml  topic-sample2.yaml
src/: main.rs
src/bridge/: mod.rs
src/ems/: c_binding.rs  mod.rs
src/queue/: mod.rs
src/scaler/: mod.rs
src/topic/: mod.rs
