[package]
name = "tibco-ems-operator"
version = "55.0.0"
authors = ["Jens Walter <jens@apimeister.com>"]
edition = "2021"

[dependencies]
kube = { version = "0.78", features = ["derive"] }
k8s-openapi = { version = "0.17", default-features = false, features = ["v1_22"] }
schemars = { version = "0.8", features = ["chrono"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
once_cell = "1.15"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
env_logger = "0.10"
env-var = "1"
urlencoding = "2"
axum = { version = "0.6" }

[target.'cfg(target_os = "macos")'.dependencies]
tibco_ems = { version = "0.5", default-features = false }
[target.'cfg(not(target_os = "macos"))'.dependencies]
tibco_ems = { version = "0.4" }

# tibco_ems = { path = "../tibco-ems-rs", version = "*"}
