[package]
name = "tibco-ems-operator"
version = "60.0.0"
authors = ["Jens Walter <jens@apimeister.com>"]
edition = "2021"

[features]
no_tibco_driver = []

[dependencies]
kube = { version = "0.98", features = ["derive"] }
k8s-openapi = { version = "0.24", default-features = false, features = [
    "v1_30",
] }
schemars = { version = "0.8", features = ["chrono"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
once_cell = "1.20"
hyper = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
env-var = "1"
urlencoding = "2"
axum = { version = "0.7" }

[target.'cfg(feature="no_tibco_driver")'.dependencies]
tibco_ems = { version = "0.5", default-features = false, features = ["serde"] }
[target.'cfg(target_os = "macos")'.dependencies]
tibco_ems = { version = "0.5", default-features = false, features = ["serde"] }
[target.'cfg(not(target_os = "macos"))'.dependencies]
tibco_ems = { version = "0.5" }
# tibco_ems = { git = "https://github.com/apimeister/tibco-ems-rs.git"}
# tibco_ems = { path = "../tibco-ems-rs", version = "*"}
